added favicon and enable javascript message

--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,13 @@ runtime: python27
 api_version: 1
 threadsafe: yes
 
+default_expiration: "30d"
+
 handlers:
+- url: /favicon\.ico
+  static_files: favicon.ico
+  upload: favicon\.ico
+
 - url: /css
   static_dir: css
 
